--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.90.2",
     "axios": "^1.12.2",
     "next": "15.5.4",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "viem": "~2.38.0",
+    "wagmi": "^2.17.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
