--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@aws-sdk/client-cognito-identity-provider": "^3.908.0",
     "@tanstack/react-query": "^5.90.2",
     "axios": "^1.12.2",
+    "lucide-react": "^0.545.0",
     "next": "15.5.4",
+    "next-auth": "^4.24.11",
+    "openid-client": "^6.8.1",
+    "qrcode.react": "^4.2.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "viem": "~2.38.0",
