--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,13 @@
       "@components/*": ["./src/components/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "global.d.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "global.d.ts",
+    "next-auth.d.ts"
+  ],
   "exclude": ["node_modules"]
 }
