--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@aws-sdk/client-cognito-identity-provider": "^3.908.0",
+    "@hookform/error-message": "^2.0.1",
+    "@hookform/resolvers": "^5.2.2",
     "@tanstack/react-query": "^5.90.2",
     "axios": "^1.12.2",
     "lucide-react": "^0.545.0",
@@ -19,8 +21,11 @@
     "qrcode.react": "^4.2.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.65.0",
     "viem": "~2.38.0",
-    "wagmi": "^2.17.5"
+    "wagmi": "^2.17.5",
+    "zod": "^4.1.12",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
