--- a/frontend/apps/web/package.json
+++ b/frontend/apps/web/package.json
@@ -13,6 +13,7 @@
     "@capacitor/android": "^7.4.3",
     "@capacitor/cli": "^7.4.3",
     "@capacitor/core": "^7.4.3",
+    "@capacitor/ios": "^7.4.3",
     "@hookform/error-message": "^2.0.1",
     "@hookform/resolvers": "^5.2.2",
     "@tanstack/react-query": "^5.90.2",
@@ -31,7 +32,9 @@
     "zustand": "^5.0.8"
   },
   "devDependencies": {
+    "@capacitor-community/electron": "^5.0.1",
     "@eslint/eslintrc": "^3",
+    "@ionic/cli": "^7.2.1",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
