--- a/frontend/apps/web/tsconfig.json
+++ b/frontend/apps/web/tsconfig.json
@@ -40,7 +40,7 @@
     "next-auth.d.ts",
     "next-env.d.ts",
     "out/types/**/*.ts"
-  ],
+, "capacitor.config.ts"  ],
   "exclude": [
     "node_modules"
   ]
